--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>FDD Checklist</title>
-	
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
 	<!-- Latest compiled and minified CSS -->
@@ -14,18 +14,18 @@
 	</div>
 	<h1 class = "main-title pink">Becoming a Main Mama</h1>
 	<h1 class = "main-title-sub">Making the Jump from Franchise to Applicant Owner</h1>
-	
+
 	<div class = "week-section">
 		<h1 class = "week-section-title">Step 1 - Week 1</h1>
 		<h1 class = "week-section-sub1">Apply! You did that already YAY YOU!</h1>
 		<h1 class = "week-section-sub2">Your Week 1 Checklist:</h1>
-		
+
 		<div class = "week-section-item week-1-a">
 			<button class = "btn btn-lg checkmark"></button>
 			<img src = ""/>
 			<a style = "color: white;"href = "https://jill3.youcanbook.me/"><p>a. Have your Meet & Greet with Jill, Hot Mama's Original Mentor</p></a>
 		</div>
-		
+
 		<div class = "week-section-item week-1-b">
 			<button class = "btn btn-lg checkmark"></button>
 			<p>b. Start following us on FB, Youtube, instagram, pinterest, & twitter to join our community of amazing Mamas!</p>
@@ -35,24 +35,72 @@
 				<a href = "https://www.youtube.com/channel/UCEInntjK0XCJluUaQMQ-OJw" class = "btn btn-default btn-md pad-20 margin-left-20">p</a>
 				<a href = "https://www.pinterest.com/hotmamafit/" class = "btn btn-default btn-md pad-20 margin-left-20">t</a>
 		</div>
-		
+
 		<div class = "week-section-item week-1-c">
 			<button class = "btn btn-lg checkmark"></button>
 			<p>c. Join our newsletter to keep in the Hot Mama loop and receive exlusive discounts on classes, retreats and other hot swag!</p>
 		</div>
-		
+
 		<div class = "week-section-item week-1-d">
 			<button class = "btn btn-lg checkmark"></button>
 			<p>d. Go to a Hot Mama class if you can get to one in your area!</p>
 		</div>
-		
+
 		<a href = "#" class = "btn btn-default btn-md">Click to find your nearest Hot Mama location</a>
-		
+
 		<div class = "week-section-item week-1-e">
 			<img src = "images/ignitelogo_PB_nosub.svg">
 			<p>e. Redeem your coupon for $50 OFF Hot Mama's newest 28-day at-home fitness program IGNITE: Fuel, Flash, Burn, or Torch!<br>(expires in 7 days - go Mama, go!)</p>
 			<button class = "btn btn-lg checkmark"></button>
 		</div>
 	</div>
+
+
+	<!-- WEEK 2  -->
+	<div class = "week-section">
+		<h1 class = "week-section-title">Step 2 - Week 2</h1>
+		<h1 class = "week-section-sub1">Getting to know one another, AND the Hot Mama Business!</h1>
+		<h1 class = "week-section-sub2">Your Week 2 Checklist:</h1>
+
+		<div class = "week-section-item week-2-a">
+			<button class = "btn btn-lg checkmark"></button>
+			<img src = "images/original-superohm.png" class = "pull-left"/>
+			<p>a. Schedule a video call and have your "Meet the OHM" interview!</p></a>
+		</div>
+		<button class = "btn btn-lg">Click here to provide your Legal name and address for your CA</button>
+<!--Opens a pop-up for a form to fill in name and location   -->
+		<div class = "week-section-item week-1-b">
+			<button class = "btn btn-lg checkmark"></button>
+			<p>b. Receive, sign, and send back your Confidentiality Agreement so that we can share more info with you!</p>
+		</div>
+
+		<div class = "week-section-item week-1-c">
+			<img src="images/original-gradedtest.png"/>
+			<button class = "btn btn-lg checkmark"></button>
+			<p>c. Learn and study our <u>class descriptions, pricing, schedule example, and budgets.</u></p>
+		</div>
+
+		<div class = "week-section-item week-1-d">
+			<button class = "btn btn-lg checkmark"></button>
+			<p>d. Pass our short quiz about webinar content. <u><a href = "#">Click here for our quiz</a></u></p>
+		</div>
+
+		<div class = "week-section-item week-2-e">
+			<button class = "btn btn-lg checkmark"></button>
+			<img src = "images/original-supererin.png"/>
+			<img src = "images/original-videocall.png">
+			<p>e. Meet with Erin, our Business Guru, via video call to answer your questions and talk Hot Mama business</p>
+		</div>
+
+		<div class = "week-section-item week-2-e">
+			<button class = "btn btn-lg checkmark"></button>
+			<p>f. Start thinking about your franchise location name and select your population size.</p>
+			<img src = "images/original-opal.png"><img src = "images/original-onyx.png"><img src = "images/original-quartz.png">
+		</div>
+	</div>
+
+
+
+
 </body>
 </html>
