updating week sections

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class = "week-section-item week-1-a">
 				<button class = "btn btn-lg checkmark"></button>
 				<img src = ""/>
-				<a style = "color: white;" href = "https://jill3.youcanbook.me/"><p>a. Have your Meet & Greet with Jill, Hot Mama's Original Mentor</p></a>
+				<a href = "https://jill3.youcanbook.me/"><p>a. Have your Meet & Greet with Jill, Hot Mama's Original Mentor</p></a>
 			</div>
 
 			<div class = "week-section-item week-1-b">
@@ -75,23 +75,26 @@
 				<img src = "images/original-superohm.png"/>
 				<p>a. Schedule a video call and have your "Meet the OHM" interview!</p></a>
 			</div>
-
-			<button class = "btn btn-lg">Click here to provide your Legal name and address for your CA</button>
-			<!--Opens a pop-up for a form to fill in name and location   -->
+			
 			<div class = "week-section-item week-1-b">
 				<button class = "btn btn-lg checkmark"></button>
 				<p>b. Receive, sign, and send back your Confidentiality Agreement so that we can share more info with you!</p>
 			</div>
 
+			<!--Opens a pop-up for a form to fill in name and location   -->
+			<div class = "center">
+				<button class = "btn btn-lg btn-blue">Click here to provide your Legal name and address for your CA</button>
+			</div>
+
 			<div class = "week-section-item week-2-c">
 				<img src="images/original-gradedtest.png"/>
 				<button class = "btn btn-lg checkmark"></button>
-				<p>c. Learn and study our <u>class descriptions, pricing, schedule example, and budgets.</u></p>
+				<p>c. Learn and study our <a href = "https://s3.amazonaws.com/res.wixpulse.com/184704/resources/1278433/original-1_hotmamasclassdescriptions.pdf?AWSAccessKeyId=AKIAJA6K3EEY55MVMVBQ&Expires=1470963096&Signature=mUN%2F6Qt5%2BmNtOD9BzwBwAq19ifU%3D">class descriptions</a>, <a href = "https://s3.amazonaws.com/res.wixpulse.com/184704/resources/1278437/original-2_classpricing.pdf?AWSAccessKeyId=AKIAJA6K3EEY55MVMVBQ&Expires=1470962995&Signature=p26LyjuN114Ic%2FEoYNDEJlrxmiw%3D">pricing</a>, <a href = "https://s3.amazonaws.com/res.wixpulse.com/184704/resources/1424349/original-firstyearclassscheduleexample_8-5x11.pdf?AWSAccessKeyId=AKIAJA6K3EEY55MVMVBQ&Expires=1470963375&Signature=aVdog%2Brwq3IwWmCjpZm06sJBt9Q%3D">schedule example</a>, and <a href = "https://s3.amazonaws.com/res.wixpulse.com/184704/resources/1424350/original-firstyearbudgetsuggestions.pdf?AWSAccessKeyId=AKIAJA6K3EEY55MVMVBQ&Expires=1470963437&Signature=klP%2BlIOBNm7uN5UnqnmKCnUwrBU%3D">budgets</a>.</p>
 			</div>
 
 			<div class = "week-section-item week-1-d">
 				<button class = "btn btn-lg checkmark"></button>
-				<p>d. Pass our short quiz about webinar content. <u><a href = "#">Click here for our quiz</a></u></p>
+				<a href = "#"><p>d. Pass our short quiz about webinar content. Click here for our quiz</p></a>
 			</div>
 
 			<div class = "week-section-item week-2-e">
@@ -120,7 +123,7 @@
 
 			<div class = "week-section-item week-3-a">
 				<button class = "btn btn-lg checkmark"></button>
-				<a style = "color: white;" href = "https://hotmamafit.youcanbook.me/"><p>a. Book your Intro to FDD call with Erin to discuss the Franchise Disclosure Document (FDD)</p></a>
+				<a href = "https://hotmamafit.youcanbook.me/"><p>a. Book your Intro to FDD call with Erin to discuss the Franchise Disclosure Document (FDD)</p></a>
 			</div>
 
 			<!-- TODO: ENTER BUTTON FOR ACCEPTING CODE AND GIVING FDD DOCUMENT -->
@@ -133,7 +136,7 @@
 
 			<div class = "week-section-item week-3-c">
 				<button class = "btn btn-lg checkmark"></button>
-				<a style = "color: white;" href = "https://www.commissionaires.ca/en/national/service/individual/electronic-criminal-record-checks"><p>c. Suppy a Criminal Record Check</p></a>
+				<a href = "https://www.commissionaires.ca/en/national/service/individual/electronic-criminal-record-checks"><p>c. Suppy a Criminal Record Check</p></a>
 			</div>
 
 			<div class = "week-section-item week-3-d">
@@ -166,7 +169,7 @@
 			<div class = "week-section-item week-1-a">
 				<button class = "btn btn-lg checkmark"></button>
 				<img src = ""/>
-				<a style = "color: white;"href = "https://jill3.youcanbook.me/"><p>a. Have your Meet & Greet with Jill, Hot Mama's Original Mentor</p></a>
+				<a href = "https://jill3.youcanbook.me/"><p>a. Have your Meet & Greet with Jill, Hot Mama's Original Mentor</p></a>
 			</div>
 
 			<div class = "week-section-item week-1-b">
