Checkmarks work, must be checked in order, data is stored via cache

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<title>FDD Checklist</title>
@@ -25,28 +26,28 @@
 			<h1 class = "week-section-sub2">Your Week 1 Checklist:</h1>
 
 			<div class = "week-section-item week-1-a">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<img src = ""/>
 				<a href = "https://jill3.youcanbook.me/"><p>a. Have your Meet & Greet with Jill, Hot Mama's Original Mentor</p></a>
 			</div>
 
 			<div class = "week-section-item week-1-b">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>b. Start following us on FB, Youtube, instagram, pinterest, & twitter to join our community of amazing Mamas!</p>
 					<a href = "https://www.facebook.com/HotMamaHealthFitness/" class = "btn btn-default btn-md pad-20">F</a>
-					<a href = "https://twitter.com/hotmamafit" class = "btn btn-default btn-md pad-20 margin-left-20">Y</a>
-					<a href = "https://www.instagram.com/hotmamafit.hq/" class = "btn btn-default btn-md pad-20 margin-left-20">i</a>
-					<a href = "https://www.youtube.com/channel/UCEInntjK0XCJluUaQMQ-OJw" class = "btn btn-default btn-md pad-20 margin-left-20">p</a>
-					<a href = "https://www.pinterest.com/hotmamafit/" class = "btn btn-default btn-md pad-20 margin-left-20">t</a>
+					<a href = "https://www.youtube.com/channel/UCEInntjK0XCJluUaQMQ-OJw" class = "btn btn-default btn-md pad-20 margin-left-20">Y</a>
+					<a href = "https://www.instagram.com/hotmamafit.hq/" class = "btn btn-default btn-md pad-20 margin-left-20">I</a>
+					<a href = "https://www.pinterest.com/hotmamafit/" class = "btn btn-default btn-md pad-20 margin-left-20">P</a>
+					<a href = "https://twitter.com/hotmamafit" class = "btn btn-default btn-md pad-20 margin-left-20">T</a>
 			</div>
 
 			<div class = "week-section-item week-1-c">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>c. Join our newsletter to keep in the Hot Mama loop and receive exclusive discounts on classes, retreats and other hot swag!</p>
 			</div>
 
 			<div class = "week-section-item week-1-d">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>d. Go to a Hot Mama class if you can get to one in your area!</p>
 			</div>
 
@@ -55,7 +56,7 @@
 			<div class = "week-section-item week-1-e">
 				<img src = "images/ignitelogo_PB_nosub.svg">
 				<p>e. Redeem your coupon for $50 OFF Hot Mama's newest 28-day at-home fitness program IGNITE: Fuel, Flash, Burn, or Torch!<br>(expires in 7 days - go Mama, go!)</p>
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 			</div>
 		</div> <!-- End Inner -->
 	</div> <!-- End week-section -->
@@ -71,13 +72,13 @@
 			<h1 class = "week-section-sub2">Your Week 2 Checklist:</h1>
 
 			<div class = "week-section-item week-2-a">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<img src = "images/original-superohm.png"/>
-				<p>a. Schedule a video call and have your "Meet the OHM" interview!</p></a>
+				<p>a. Schedule a video call and have your "Meet the OHM" interview!</p>
 			</div>
 			
 			<div class = "week-section-item week-1-b">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>b. Receive, sign, and send back your Confidentiality Agreement so that we can share more info with you!</p>
 			</div>
 
@@ -88,24 +89,24 @@
 
 			<div class = "week-section-item week-2-c">
 				<img src="images/original-gradedtest.png"/>
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>c. Learn and study our <a href = "https://s3.amazonaws.com/res.wixpulse.com/184704/resources/1278433/original-1_hotmamasclassdescriptions.pdf?AWSAccessKeyId=AKIAJA6K3EEY55MVMVBQ&Expires=1470963096&Signature=mUN%2F6Qt5%2BmNtOD9BzwBwAq19ifU%3D">class descriptions</a>, <a href = "https://s3.amazonaws.com/res.wixpulse.com/184704/resources/1278437/original-2_classpricing.pdf?AWSAccessKeyId=AKIAJA6K3EEY55MVMVBQ&Expires=1470962995&Signature=p26LyjuN114Ic%2FEoYNDEJlrxmiw%3D">pricing</a>, <a href = "https://s3.amazonaws.com/res.wixpulse.com/184704/resources/1424349/original-firstyearclassscheduleexample_8-5x11.pdf?AWSAccessKeyId=AKIAJA6K3EEY55MVMVBQ&Expires=1470963375&Signature=aVdog%2Brwq3IwWmCjpZm06sJBt9Q%3D">schedule example</a>, and <a href = "https://s3.amazonaws.com/res.wixpulse.com/184704/resources/1424350/original-firstyearbudgetsuggestions.pdf?AWSAccessKeyId=AKIAJA6K3EEY55MVMVBQ&Expires=1470963437&Signature=klP%2BlIOBNm7uN5UnqnmKCnUwrBU%3D">budgets</a>.</p>
 			</div>
 
 			<div class = "week-section-item week-1-d">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<a href = "#"><p>d. Pass our short quiz about webinar content. Click here for our quiz</p></a>
 			</div>
 
 			<div class = "week-section-item week-2-e">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<img src = "images/original-supererin.png"/>
 				<img src = "images/original-videocall.png">
 				<p>e. Meet with Erin, our Business Guru, via video call to answer your questions and talk Hot Mama business</p>
 			</div>
 
 			<div class = "week-section-item week-2-e">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>f. Start thinking about your franchise location name and select your population size.</p>
 				<img src = "images/original-opal.png"><img src = "images/original-onyx.png"><img src = "images/original-quartz.png">
 			</div>
@@ -122,31 +123,31 @@
 			<h1 class = "week-section-sub2">Your Week 3 Checklist:</h1>
 
 			<div class = "week-section-item week-3-a">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<a href = "https://hotmamafit.youcanbook.me/"><p>a. Book your Intro to FDD call with Erin to discuss the Franchise Disclosure Document (FDD)</p></a>
 			</div>
 
 			<!-- TODO: ENTER BUTTON FOR ACCEPTING CODE AND GIVING FDD DOCUMENT -->
 
 			<div class = "week-section-item week-3-b">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<img src = "images/original-legalpapers.png">
 				<p>b. Sign & send back your receipit of the FDD</p>
 			</div>
 
 			<div class = "week-section-item week-3-c">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<a href = "https://www.commissionaires.ca/en/national/service/individual/electronic-criminal-record-checks"><p>c. Suppy a Criminal Record Check</p></a>
 			</div>
 
 			<div class = "week-section-item week-3-d">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>d. Watch your surprise video from the "OHM!" </p>
 				<iframe width="500" height="294" src="https://www.youtube.com/embed/HP_GKBizK0w" frameborder="0" allowfullscreen></iframe>
 			</div>
 
 			<div class = "week-section-item week-3-e">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>immerse yourself in the Hot Mama culture...learn, learn, learn!</p>
 			</div>
 			<div class = "center">
@@ -167,13 +168,13 @@
 			<h1 class = "week-section-sub2">Your Week 1 Checklist:</h1>
 
 			<div class = "week-section-item week-1-a">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<img src = ""/>
 				<a href = "https://jill3.youcanbook.me/"><p>a. Have your Meet & Greet with Jill, Hot Mama's Original Mentor</p></a>
 			</div>
 
 			<div class = "week-section-item week-1-b">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>b. Start following us on FB, Youtube, instagram, pinterest, & twitter to join our community of amazing Mamas!</p>
 					<a href = "https://www.facebook.com/HotMamaHealthFitness/" class = "btn btn-default btn-md pad-20">F</a>
 					<a href = "https://twitter.com/hotmamafit" class = "btn btn-default btn-md pad-20 margin-left-20">Y</a>
@@ -183,12 +184,12 @@
 			</div>
 
 			<div class = "week-section-item week-1-c">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>c. Join our newsletter to keep in the Hot Mama loop and receive exclusive discounts on classes, retreats and other hot swag!</p>
 			</div>
 
 			<div class = "week-section-item week-1-d">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>d. Go to a Hot Mama class if you can get to one in your area!</p>
 			</div>
 
@@ -197,7 +198,7 @@
 			<div class = "week-section-item week-1-e">
 				<img src = "images/ignitelogo_PB_nosub.svg">
 				<p>e. Redeem your coupon for $50 OFF Hot Mama's newest 28-day at-home fitness program IGNITE: Fuel, Flash, Burn, or Torch!<br>(expires in 7 days - go Mama, go!)</p>
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 			</div>
 		</div> <!-- End Inner -->
 	</div> <!-- End week-section -->
@@ -212,13 +213,13 @@
 			<h1 class = "week-section-sub2">Your Week 1 Checklist:</h1>
 
 			<div class = "week-section-item week-1-a">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<img src = ""/>
-				<a style = "color: white;"href = "https://jill3.youcanbook.me/"><p>a. Have your Meet & Greet with Jill, Hot Mama's Original Mentor</p></a>
+				<a style = "color:white;" href = "https://jill3.youcanbook.me/"><p>a. Have your Meet & Greet with Jill, Hot Mama's Original Mentor</p></a>
 			</div>
 
 			<div class = "week-section-item week-1-b">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>b. Start following us on FB, Youtube, instagram, pinterest, & twitter to join our community of amazing Mamas!</p>
 					<a href = "https://www.facebook.com/HotMamaHealthFitness/" class = "btn btn-default btn-md pad-20">F</a>
 					<a href = "https://twitter.com/hotmamafit" class = "btn btn-default btn-md pad-20 margin-left-20">Y</a>
@@ -228,12 +229,12 @@
 			</div>
 
 			<div class = "week-section-item week-1-c">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>c. Join our newsletter to keep in the Hot Mama loop and receive exclusive discounts on classes, retreats and other hot swag!</p>
 			</div>
 
 			<div class = "week-section-item week-1-d">
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>d. Go to a Hot Mama class if you can get to one in your area!</p>
 			</div>
 
@@ -242,21 +243,13 @@
 			<div class = "week-section-item week-1-e">
 				<img src = "images/ignitelogo_PB_nosub.svg">
 				<p>e. Redeem your coupon for $50 OFF Hot Mama's newest 28-day at-home fitness program IGNITE: Fuel, Flash, Burn, or Torch!<br>(expires in 7 days - go Mama, go!)</p>
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 			</div>
 		</div> <!-- End Inner -->
 	</div> <!-- End week-section -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-	<script>
-	function toggle(id){
-		if(event.target.id.localeCompare(id)==0 || event.target.tagName.localeCompare('H1') == 0){
-			var x = '#inner'+id.split('-')[1]+'.collapse';
-			$(x).collapse('toggle');
-		}
-	};
-	</script>
+	<script src="js/functions.js"></script>
 </body>
 </html>
