Events now handle properly of firefox

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
 	<title>FDD Checklist</title>
 
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	
 	<link href = "css/custom.css" rel ="stylesheet">
+
 </head>
 <body>
 	<div class = "title-image-space">
@@ -17,7 +21,7 @@
 	<h1 class = "main-title-sub">Making the Jump from Applicant to Franchise Owner</h1>
 
 	<!-- WEEK 1  -->
-	<div class = "week-section" id="week-1" onclick="toggle('week-1')">
+	<div class = "week-section" id="week-1" onclick="tgl(this.id,event)">
 		<button class = "btn btn-xl collapse-button" data-toggle="collapse" data-target="#inner1">+</button>
 		<h1 class = "week-section-title">Step 1 - Week 1</h1>
 		<h1 class = "week-section-sub1">Apply! You did that already YAY YOU!</h1>
@@ -63,7 +67,7 @@
 
 
 	<!-- WEEK 2  -->
-	<div class = "week-section" id="week-2" onclick="toggle('week-2')">
+	<div class = "week-section" id="week-2" onclick="tgl(this.id,event)">
 
 		<button class = "btn btn-xl collapse-button" data-toggle="collapse" data-target="#inner2">+</button>
 		<h1 class = "week-section-title">Step 2 - Week 2</h1>
@@ -114,7 +118,7 @@
 	</div>
 
 	<!-- WEEK 3  -->
-	<div class = "week-section" id="week-3" onclick="toggle('week-3')">
+	<div class = "week-section" id="week-3" onclick="tgl(this.id,event)">
 		<button class = "btn btn-xl collapse-button" data-toggle="collapse" data-target="#inner3">+</button>
 		<h1 class = "week-section-title">Step 3 - Week 3</h1>
 		<h1 class = "week-section-sub1">It's time for Hot Mama culture and legalese!</h1>
@@ -159,7 +163,7 @@
 	</div> <!-- End week-section -->
 
 	<!-- WEEK 4/5 -->
-	<div class = "week-section" id="week-4" onclick="toggle('week-4')">
+	<div class = "week-section" id="week-45" onclick="tgl(this.id,event)">
 		<button class = "btn btn-xl collapse-button" data-toggle="collapse" data-target="#inner45">+</button>
 		<h1 class = "week-section-title">Step 1 - Week 1</h1>
 		<h1 class = "week-section-sub1">Apply! You did that already YAY YOU!</h1>
@@ -204,7 +208,7 @@
 	</div> <!-- End week-section -->
 
 	<!-- WEEK 6  -->
-	<div class = "week-section" id="week-5" onclick="toggle('week-5')">
+	<div class = "week-section" id="week-6" onclick="tgl(this.id,event)">
 		<button class = "btn btn-xl collapse-button" data-toggle="collapse" data-target="#inner6">+</button>
 		<h1 class = "week-section-title">Step 1 - Week 1</h1>
 		<h1 class = "week-section-sub1">Apply! You did that already YAY YOU!</h1>
